--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,29 @@ body {
 }
 
 #logo {
-  width: 15%;
+  max-height: 400px;
 }
 
 #logo-container {
   -webkit-filter: invert(100%);
           filter: invert(100%);
+  height: 90vh;
+}
+
+.nav-item {
+  color: #0a557b !important;
+}
+
+.nav-item {
+  margin-right: 20px;
+}
+
+#particle-bg {
+  position: fixed;
+  z-index: -3;
   height: 100vh;
+  left: 0;
+  right: 0;
 }
 
 div#topDiv {
@@ -41,6 +57,10 @@ div#centerDiv {
   background: white;
   display: none;
   z-index: 1;
+}
+
+.nav-link {
+  color: #0a557b;
 }
 
 .glitch {
@@ -81,133 +101,133 @@ div#centerDiv {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(36px, 9999px, 89px, 0);
+    clip: rect(64px, 9999px, 63px, 0);
   }
   5% {
-    clip: rect(72px, 9999px, 20px, 0);
+    clip: rect(24px, 9999px, 58px, 0);
   }
   10% {
-    clip: rect(66px, 9999px, 51px, 0);
+    clip: rect(90px, 9999px, 30px, 0);
   }
   15% {
-    clip: rect(22px, 9999px, 11px, 0);
+    clip: rect(97px, 9999px, 47px, 0);
   }
   20% {
-    clip: rect(17px, 9999px, 37px, 0);
+    clip: rect(88px, 9999px, 15px, 0);
   }
   25% {
-    clip: rect(16px, 9999px, 55px, 0);
+    clip: rect(18px, 9999px, 43px, 0);
   }
   30% {
-    clip: rect(12px, 9999px, 15px, 0);
+    clip: rect(76px, 9999px, 14px, 0);
   }
   35% {
-    clip: rect(10px, 9999px, 60px, 0);
+    clip: rect(19px, 9999px, 17px, 0);
   }
   40% {
-    clip: rect(25px, 9999px, 74px, 0);
+    clip: rect(80px, 9999px, 41px, 0);
   }
   45% {
-    clip: rect(13px, 9999px, 54px, 0);
+    clip: rect(32px, 9999px, 18px, 0);
   }
   50% {
-    clip: rect(30px, 9999px, 48px, 0);
+    clip: rect(77px, 9999px, 43px, 0);
   }
   55% {
-    clip: rect(17px, 9999px, 70px, 0);
+    clip: rect(31px, 9999px, 84px, 0);
   }
   60% {
-    clip: rect(47px, 9999px, 14px, 0);
+    clip: rect(60px, 9999px, 76px, 0);
   }
   65% {
-    clip: rect(24px, 9999px, 52px, 0);
+    clip: rect(17px, 9999px, 2px, 0);
   }
   70% {
-    clip: rect(51px, 9999px, 69px, 0);
+    clip: rect(97px, 9999px, 93px, 0);
   }
   75% {
-    clip: rect(18px, 9999px, 9px, 0);
+    clip: rect(58px, 9999px, 91px, 0);
   }
   80% {
-    clip: rect(82px, 9999px, 24px, 0);
+    clip: rect(13px, 9999px, 76px, 0);
   }
   85% {
-    clip: rect(76px, 9999px, 25px, 0);
+    clip: rect(90px, 9999px, 71px, 0);
   }
   90% {
-    clip: rect(79px, 9999px, 45px, 0);
+    clip: rect(4px, 9999px, 25px, 0);
   }
   95% {
-    clip: rect(44px, 9999px, 12px, 0);
+    clip: rect(37px, 9999px, 11px, 0);
   }
   100% {
-    clip: rect(33px, 9999px, 5px, 0);
+    clip: rect(81px, 9999px, 52px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(36px, 9999px, 89px, 0);
+    clip: rect(64px, 9999px, 63px, 0);
   }
   5% {
-    clip: rect(72px, 9999px, 20px, 0);
+    clip: rect(24px, 9999px, 58px, 0);
   }
   10% {
-    clip: rect(66px, 9999px, 51px, 0);
+    clip: rect(90px, 9999px, 30px, 0);
   }
   15% {
-    clip: rect(22px, 9999px, 11px, 0);
+    clip: rect(97px, 9999px, 47px, 0);
   }
   20% {
-    clip: rect(17px, 9999px, 37px, 0);
+    clip: rect(88px, 9999px, 15px, 0);
   }
   25% {
-    clip: rect(16px, 9999px, 55px, 0);
+    clip: rect(18px, 9999px, 43px, 0);
   }
   30% {
-    clip: rect(12px, 9999px, 15px, 0);
+    clip: rect(76px, 9999px, 14px, 0);
   }
   35% {
-    clip: rect(10px, 9999px, 60px, 0);
+    clip: rect(19px, 9999px, 17px, 0);
   }
   40% {
-    clip: rect(25px, 9999px, 74px, 0);
+    clip: rect(80px, 9999px, 41px, 0);
   }
   45% {
-    clip: rect(13px, 9999px, 54px, 0);
+    clip: rect(32px, 9999px, 18px, 0);
   }
   50% {
-    clip: rect(30px, 9999px, 48px, 0);
+    clip: rect(77px, 9999px, 43px, 0);
   }
   55% {
-    clip: rect(17px, 9999px, 70px, 0);
+    clip: rect(31px, 9999px, 84px, 0);
   }
   60% {
-    clip: rect(47px, 9999px, 14px, 0);
+    clip: rect(60px, 9999px, 76px, 0);
   }
   65% {
-    clip: rect(24px, 9999px, 52px, 0);
+    clip: rect(17px, 9999px, 2px, 0);
   }
   70% {
-    clip: rect(51px, 9999px, 69px, 0);
+    clip: rect(97px, 9999px, 93px, 0);
   }
   75% {
-    clip: rect(18px, 9999px, 9px, 0);
+    clip: rect(58px, 9999px, 91px, 0);
   }
   80% {
-    clip: rect(82px, 9999px, 24px, 0);
+    clip: rect(13px, 9999px, 76px, 0);
   }
   85% {
-    clip: rect(76px, 9999px, 25px, 0);
+    clip: rect(90px, 9999px, 71px, 0);
   }
   90% {
-    clip: rect(79px, 9999px, 45px, 0);
+    clip: rect(4px, 9999px, 25px, 0);
   }
   95% {
-    clip: rect(44px, 9999px, 12px, 0);
+    clip: rect(37px, 9999px, 11px, 0);
   }
   100% {
-    clip: rect(33px, 9999px, 5px, 0);
+    clip: rect(81px, 9999px, 52px, 0);
   }
 }
 /*# sourceMappingURL=style.css.map */
