--- a/css/style.scss
+++ b/css/style.scss
@@ -7,11 +7,24 @@ body {
   overflow: hidden;
 }
 #logo {
-  width: 15%;
+  max-height: 400px;
 }
 #logo-container {
   filter: invert(100%);
+  height: 90vh;
+}
+.nav-item{
+  color: #0a557b !important;
+}
+.nav-item{
+  margin-right: 20px;
+}
+#particle-bg{
+  position: fixed;
+  z-index: -3;
   height: 100vh;
+  left: 0;
+  right: 0;
 }
 
 div#topDiv {
@@ -38,6 +51,9 @@ div#centerDiv {
   background: white;
   display: none;
   z-index: 1;
+}
+.nav-link{
+  color: #0a557b;
 }
 $primaryColor: #fff;
 $secondaryColor: #333;
