--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body {
   height: 90vh;
 }
 
+#timer {
+  font-size: 2rem;
+}
+
 .nav-item {
   color: #0a557b !important;
 }
@@ -70,7 +74,10 @@ div#centerDiv {
 
 body.modal-open .container-fluid {
   -webkit-filter: blur(4px);
-          filter: blur(4px);
+  -moz-filter: blur(4px);
+  -o-filter: blur(4px);
+  -ms-filter: blur(4px);
+  filter: blur(4px);
   filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
 }
 
@@ -112,133 +119,192 @@ body.modal-open .container-fluid {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(44px, 9999px, 8px, 0);
+    clip: rect(65px, 9999px, 70px, 0);
   }
   5% {
-    clip: rect(83px, 9999px, 36px, 0);
+    clip: rect(87px, 9999px, 80px, 0);
   }
   10% {
-    clip: rect(83px, 9999px, 29px, 0);
-  }
-  15% {
-    clip: rect(43px, 9999px, 92px, 0);
-  }
-  20% {
-    clip: rect(46px, 9999px, 32px, 0);
-  }
-  25% {
-    clip: rect(62px, 9999px, 77px, 0);
-  }
-  30% {
-    clip: rect(96px, 9999px, 27px, 0);
-  }
-  35% {
-    clip: rect(54px, 9999px, 64px, 0);
-  }
-  40% {
-    clip: rect(32px, 9999px, 34px, 0);
-  }
-  45% {
-    clip: rect(31px, 9999px, 5px, 0);
-  }
-  50% {
-    clip: rect(96px, 9999px, 80px, 0);
-  }
-  55% {
-    clip: rect(60px, 9999px, 21px, 0);
-  }
-  60% {
-    clip: rect(68px, 9999px, 13px, 0);
-  }
-  65% {
-    clip: rect(42px, 9999px, 4px, 0);
-  }
-  70% {
-    clip: rect(100px, 9999px, 5px, 0);
-  }
-  75% {
-    clip: rect(89px, 9999px, 6px, 0);
-  }
-  80% {
-    clip: rect(3px, 9999px, 21px, 0);
-  }
-  85% {
-    clip: rect(24px, 9999px, 57px, 0);
-  }
-  90% {
-    clip: rect(10px, 9999px, 12px, 0);
-  }
-  95% {
     clip: rect(75px, 9999px, 93px, 0);
   }
+  15% {
+    clip: rect(59px, 9999px, 13px, 0);
+  }
+  20% {
+    clip: rect(36px, 9999px, 53px, 0);
+  }
+  25% {
+    clip: rect(9px, 9999px, 56px, 0);
+  }
+  30% {
+    clip: rect(19px, 9999px, 20px, 0);
+  }
+  35% {
+    clip: rect(33px, 9999px, 72px, 0);
+  }
+  40% {
+    clip: rect(99px, 9999px, 100px, 0);
+  }
+  45% {
+    clip: rect(53px, 9999px, 90px, 0);
+  }
+  50% {
+    clip: rect(2px, 9999px, 85px, 0);
+  }
+  55% {
+    clip: rect(23px, 9999px, 67px, 0);
+  }
+  60% {
+    clip: rect(16px, 9999px, 38px, 0);
+  }
+  65% {
+    clip: rect(2px, 9999px, 73px, 0);
+  }
+  70% {
+    clip: rect(15px, 9999px, 92px, 0);
+  }
+  75% {
+    clip: rect(23px, 9999px, 51px, 0);
+  }
+  80% {
+    clip: rect(47px, 9999px, 71px, 0);
+  }
+  85% {
+    clip: rect(63px, 9999px, 20px, 0);
+  }
+  90% {
+    clip: rect(68px, 9999px, 69px, 0);
+  }
+  95% {
+    clip: rect(58px, 9999px, 74px, 0);
+  }
   100% {
-    clip: rect(30px, 9999px, 98px, 0);
+    clip: rect(19px, 9999px, 85px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(44px, 9999px, 8px, 0);
+    clip: rect(65px, 9999px, 70px, 0);
   }
   5% {
-    clip: rect(83px, 9999px, 36px, 0);
+    clip: rect(87px, 9999px, 80px, 0);
   }
   10% {
-    clip: rect(83px, 9999px, 29px, 0);
-  }
-  15% {
-    clip: rect(43px, 9999px, 92px, 0);
-  }
-  20% {
-    clip: rect(46px, 9999px, 32px, 0);
-  }
-  25% {
-    clip: rect(62px, 9999px, 77px, 0);
-  }
-  30% {
-    clip: rect(96px, 9999px, 27px, 0);
-  }
-  35% {
-    clip: rect(54px, 9999px, 64px, 0);
-  }
-  40% {
-    clip: rect(32px, 9999px, 34px, 0);
-  }
-  45% {
-    clip: rect(31px, 9999px, 5px, 0);
-  }
-  50% {
-    clip: rect(96px, 9999px, 80px, 0);
-  }
-  55% {
-    clip: rect(60px, 9999px, 21px, 0);
-  }
-  60% {
-    clip: rect(68px, 9999px, 13px, 0);
-  }
-  65% {
-    clip: rect(42px, 9999px, 4px, 0);
-  }
-  70% {
-    clip: rect(100px, 9999px, 5px, 0);
-  }
-  75% {
-    clip: rect(89px, 9999px, 6px, 0);
-  }
-  80% {
-    clip: rect(3px, 9999px, 21px, 0);
-  }
-  85% {
-    clip: rect(24px, 9999px, 57px, 0);
-  }
-  90% {
-    clip: rect(10px, 9999px, 12px, 0);
-  }
-  95% {
     clip: rect(75px, 9999px, 93px, 0);
   }
+  15% {
+    clip: rect(59px, 9999px, 13px, 0);
+  }
+  20% {
+    clip: rect(36px, 9999px, 53px, 0);
+  }
+  25% {
+    clip: rect(9px, 9999px, 56px, 0);
+  }
+  30% {
+    clip: rect(19px, 9999px, 20px, 0);
+  }
+  35% {
+    clip: rect(33px, 9999px, 72px, 0);
+  }
+  40% {
+    clip: rect(99px, 9999px, 100px, 0);
+  }
+  45% {
+    clip: rect(53px, 9999px, 90px, 0);
+  }
+  50% {
+    clip: rect(2px, 9999px, 85px, 0);
+  }
+  55% {
+    clip: rect(23px, 9999px, 67px, 0);
+  }
+  60% {
+    clip: rect(16px, 9999px, 38px, 0);
+  }
+  65% {
+    clip: rect(2px, 9999px, 73px, 0);
+  }
+  70% {
+    clip: rect(15px, 9999px, 92px, 0);
+  }
+  75% {
+    clip: rect(23px, 9999px, 51px, 0);
+  }
+  80% {
+    clip: rect(47px, 9999px, 71px, 0);
+  }
+  85% {
+    clip: rect(63px, 9999px, 20px, 0);
+  }
+  90% {
+    clip: rect(68px, 9999px, 69px, 0);
+  }
+  95% {
+    clip: rect(58px, 9999px, 74px, 0);
+  }
   100% {
-    clip: rect(30px, 9999px, 98px, 0);
+    clip: rect(19px, 9999px, 85px, 0);
+  }
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+
+.lds-ring div {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border: 6px solid #fff;
+  border-radius: 50%;
+  -webkit-animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+          animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+  -webkit-animation-delay: -0.45s;
+          animation-delay: -0.45s;
+}
+
+.lds-ring div:nth-child(2) {
+  -webkit-animation-delay: -0.3s;
+          animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+  -webkit-animation-delay: -0.15s;
+          animation-delay: -0.15s;
+}
+
+@-webkit-keyframes lds-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes lds-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
