--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,9 @@ body {
   filter: invert(100%);
   height: 90vh;
 }
+#timer{
+  font-size: 2rem;
+}
 .nav-item{
   color: #0a557b !important;
 }
@@ -56,10 +59,15 @@ div#centerDiv {
   color: #0a557b;
   cursor: pointer;
 }
+
 .modal-dialog{
   background: radial-gradient(#f1f1f1, #acacac);
 }
 body.modal-open .container-fluid{
+  -webkit-filter: blur(4px);
+  -moz-filter: blur(4px);
+  -o-filter: blur(4px);
+  -ms-filter: blur(4px);
   filter: blur(4px);
   // filter: url("https://gist.githubusercontent.com/amitabhaghosh197/b7865b409e835b5a43b5/raw/1a255b551091924971e7dee8935fd38a7fdf7311/blur.svg#blur");
 filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
@@ -109,5 +117,40 @@ $steps: 20;
     #{percentage($i*(1/$steps))} {
       clip: rect(random(100) + px, 9999px, random(100) + px, 0);
     }
+  }
+}
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border: 6px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
