--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body {
   max-height: 400px;
 }
 
+#log-reg-body {
+  -webkit-box-shadow: 0px 0px 13px #212121;
+          box-shadow: 0px 0px 13px #212121;
+}
+
 #logo-container {
   -webkit-filter: invert(100%);
           filter: invert(100%);
@@ -68,10 +73,6 @@ div#centerDiv {
   cursor: pointer;
 }
 
-.modal-dialog {
-  background: radial-gradient(#f1f1f1, #acacac);
-}
-
 body.modal-open .container-fluid {
   -webkit-filter: blur(4px);
   -moz-filter: blur(4px);
@@ -119,133 +120,133 @@ body.modal-open .container-fluid {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(65px, 9999px, 70px, 0);
+    clip: rect(2px, 9999px, 69px, 0);
   }
   5% {
-    clip: rect(87px, 9999px, 80px, 0);
+    clip: rect(14px, 9999px, 75px, 0);
   }
   10% {
-    clip: rect(75px, 9999px, 93px, 0);
+    clip: rect(2px, 9999px, 24px, 0);
   }
   15% {
-    clip: rect(59px, 9999px, 13px, 0);
+    clip: rect(93px, 9999px, 100px, 0);
   }
   20% {
-    clip: rect(36px, 9999px, 53px, 0);
+    clip: rect(46px, 9999px, 81px, 0);
   }
   25% {
-    clip: rect(9px, 9999px, 56px, 0);
+    clip: rect(18px, 9999px, 65px, 0);
   }
   30% {
-    clip: rect(19px, 9999px, 20px, 0);
+    clip: rect(1px, 9999px, 60px, 0);
   }
   35% {
-    clip: rect(33px, 9999px, 72px, 0);
+    clip: rect(20px, 9999px, 12px, 0);
   }
   40% {
-    clip: rect(99px, 9999px, 100px, 0);
+    clip: rect(60px, 9999px, 48px, 0);
   }
   45% {
-    clip: rect(53px, 9999px, 90px, 0);
+    clip: rect(8px, 9999px, 32px, 0);
   }
   50% {
-    clip: rect(2px, 9999px, 85px, 0);
+    clip: rect(81px, 9999px, 29px, 0);
   }
   55% {
-    clip: rect(23px, 9999px, 67px, 0);
+    clip: rect(38px, 9999px, 74px, 0);
   }
   60% {
-    clip: rect(16px, 9999px, 38px, 0);
+    clip: rect(88px, 9999px, 10px, 0);
   }
   65% {
-    clip: rect(2px, 9999px, 73px, 0);
+    clip: rect(82px, 9999px, 33px, 0);
   }
   70% {
-    clip: rect(15px, 9999px, 92px, 0);
+    clip: rect(64px, 9999px, 98px, 0);
   }
   75% {
-    clip: rect(23px, 9999px, 51px, 0);
+    clip: rect(26px, 9999px, 57px, 0);
   }
   80% {
-    clip: rect(47px, 9999px, 71px, 0);
+    clip: rect(93px, 9999px, 17px, 0);
   }
   85% {
-    clip: rect(63px, 9999px, 20px, 0);
+    clip: rect(5px, 9999px, 22px, 0);
   }
   90% {
-    clip: rect(68px, 9999px, 69px, 0);
+    clip: rect(50px, 9999px, 64px, 0);
   }
   95% {
-    clip: rect(58px, 9999px, 74px, 0);
+    clip: rect(78px, 9999px, 43px, 0);
   }
   100% {
-    clip: rect(19px, 9999px, 85px, 0);
+    clip: rect(100px, 9999px, 59px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(65px, 9999px, 70px, 0);
+    clip: rect(2px, 9999px, 69px, 0);
   }
   5% {
-    clip: rect(87px, 9999px, 80px, 0);
+    clip: rect(14px, 9999px, 75px, 0);
   }
   10% {
-    clip: rect(75px, 9999px, 93px, 0);
+    clip: rect(2px, 9999px, 24px, 0);
   }
   15% {
-    clip: rect(59px, 9999px, 13px, 0);
+    clip: rect(93px, 9999px, 100px, 0);
   }
   20% {
-    clip: rect(36px, 9999px, 53px, 0);
+    clip: rect(46px, 9999px, 81px, 0);
   }
   25% {
-    clip: rect(9px, 9999px, 56px, 0);
+    clip: rect(18px, 9999px, 65px, 0);
   }
   30% {
-    clip: rect(19px, 9999px, 20px, 0);
+    clip: rect(1px, 9999px, 60px, 0);
   }
   35% {
-    clip: rect(33px, 9999px, 72px, 0);
+    clip: rect(20px, 9999px, 12px, 0);
   }
   40% {
-    clip: rect(99px, 9999px, 100px, 0);
+    clip: rect(60px, 9999px, 48px, 0);
   }
   45% {
-    clip: rect(53px, 9999px, 90px, 0);
+    clip: rect(8px, 9999px, 32px, 0);
   }
   50% {
-    clip: rect(2px, 9999px, 85px, 0);
+    clip: rect(81px, 9999px, 29px, 0);
   }
   55% {
-    clip: rect(23px, 9999px, 67px, 0);
+    clip: rect(38px, 9999px, 74px, 0);
   }
   60% {
-    clip: rect(16px, 9999px, 38px, 0);
+    clip: rect(88px, 9999px, 10px, 0);
   }
   65% {
-    clip: rect(2px, 9999px, 73px, 0);
+    clip: rect(82px, 9999px, 33px, 0);
   }
   70% {
-    clip: rect(15px, 9999px, 92px, 0);
+    clip: rect(64px, 9999px, 98px, 0);
   }
   75% {
-    clip: rect(23px, 9999px, 51px, 0);
+    clip: rect(26px, 9999px, 57px, 0);
   }
   80% {
-    clip: rect(47px, 9999px, 71px, 0);
+    clip: rect(93px, 9999px, 17px, 0);
   }
   85% {
-    clip: rect(63px, 9999px, 20px, 0);
+    clip: rect(5px, 9999px, 22px, 0);
   }
   90% {
-    clip: rect(68px, 9999px, 69px, 0);
+    clip: rect(50px, 9999px, 64px, 0);
   }
   95% {
-    clip: rect(58px, 9999px, 74px, 0);
+    clip: rect(78px, 9999px, 43px, 0);
   }
   100% {
-    clip: rect(19px, 9999px, 85px, 0);
+    clip: rect(100px, 9999px, 59px, 0);
   }
 }
 
@@ -306,5 +307,135 @@ body.modal-open .container-fluid {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
+}
+
+.mat-input-outer {
+  display: table;
+  position: relative;
+  margin: 22px;
+}
+
+.mat-input-outer input {
+  height: 50px;
+  border-radius: 3px;
+  border: none;
+  width: 100%;
+  padding: 0 15px;
+}
+
+.mat-input-outer input:focus {
+  border: 2px solid #0a557b;
+}
+
+.mat-input-outer label {
+  font-size: 14px;
+  left: 15px;
+  position: absolute;
+  top: 18px;
+  -webkit-transition: .2s;
+  transition: .2s;
+  color: #000;
+  cursor: text;
+  font-weight: normal;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+}
+
+.mat-input-outer .border {
+  height: 1px;
+  background: #000;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -ms-transition: .3s;
+}
+
+.mat-input-outer .border::before {
+  content: " ";
+  display: table;
+  height: 3px;
+  width: 0%;
+  background: transparent;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -ms-transition: .3s;
+  margin: 0 auto;
+}
+
+.mat-input-outer input:focus ~ .border {
+  background: transparent;
+}
+
+.mat-input-outer input:focus ~ .border::before {
+  width: 100%;
+  background: #0a557b;
+}
+
+.mat-input-outer input + label.active {
+  left: 5px;
+  top: -25px;
+  color: #0a557b;
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.btn2 {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: 1.5px solid #0a557b;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-size: 1rem;
+  margin: 20px;
+  padding: 12px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.btn2:hover, .btn2:focus {
+  color: #fff;
+  outline: 0;
+}
+
+.fifth {
+  border-color: #0a557b;
+  border-radius: 5px;
+  color: #0a557b;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  -webkit-transition: color 150ms ease-in-out;
+  transition: color 150ms ease-in-out;
+}
+
+.fifth:after {
+  content: '';
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 0;
+  height: 100%;
+  background: #0a557b;
+  z-index: -1;
+  -webkit-transition: width 150ms ease-in-out;
+  transition: width 150ms ease-in-out;
+}
+
+.fifth:hover {
+  color: #fff;
+}
+
+.fifth:hover:after {
+  width: 110%;
 }
 /*# sourceMappingURL=style.css.map */
