--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,20 @@ body {
   max-height: 400px;
 }
 
+#technical-events-con, #non-technical-events-con {
+  height: 40vh;
+  background-color: #fff;
+  margin: 10px 0px 0px 0px;
+}
+
+#technical-events-con {
+  color: #000;
+}
+
+#non-technical-events-con {
+  color: #000;
+}
+
 #log-reg-body {
   -webkit-box-shadow: 0px 0px 13px #212121;
           box-shadow: 0px 0px 13px #212121;
@@ -17,7 +31,7 @@ body {
 #logo-container {
   -webkit-filter: invert(100%);
           filter: invert(100%);
-  height: 90vh;
+  height: 100vh;
 }
 
 #timer {
@@ -26,9 +40,6 @@ body {
 
 .nav-item {
   color: #0a557b !important;
-}
-
-.nav-item {
   margin-right: 20px;
 }
 
@@ -120,133 +131,133 @@ body.modal-open .container-fluid {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(2px, 9999px, 69px, 0);
+    clip: rect(54px, 9999px, 77px, 0);
   }
   5% {
-    clip: rect(14px, 9999px, 75px, 0);
+    clip: rect(46px, 9999px, 77px, 0);
   }
   10% {
-    clip: rect(2px, 9999px, 24px, 0);
+    clip: rect(45px, 9999px, 57px, 0);
   }
   15% {
-    clip: rect(93px, 9999px, 100px, 0);
+    clip: rect(51px, 9999px, 34px, 0);
   }
   20% {
-    clip: rect(46px, 9999px, 81px, 0);
+    clip: rect(65px, 9999px, 13px, 0);
   }
   25% {
-    clip: rect(18px, 9999px, 65px, 0);
+    clip: rect(53px, 9999px, 42px, 0);
   }
   30% {
-    clip: rect(1px, 9999px, 60px, 0);
+    clip: rect(4px, 9999px, 84px, 0);
   }
   35% {
-    clip: rect(20px, 9999px, 12px, 0);
+    clip: rect(14px, 9999px, 100px, 0);
   }
   40% {
-    clip: rect(60px, 9999px, 48px, 0);
+    clip: rect(23px, 9999px, 46px, 0);
   }
   45% {
-    clip: rect(8px, 9999px, 32px, 0);
+    clip: rect(4px, 9999px, 55px, 0);
   }
   50% {
-    clip: rect(81px, 9999px, 29px, 0);
+    clip: rect(27px, 9999px, 13px, 0);
   }
   55% {
-    clip: rect(38px, 9999px, 74px, 0);
+    clip: rect(28px, 9999px, 53px, 0);
   }
   60% {
-    clip: rect(88px, 9999px, 10px, 0);
+    clip: rect(76px, 9999px, 69px, 0);
   }
   65% {
-    clip: rect(82px, 9999px, 33px, 0);
+    clip: rect(78px, 9999px, 60px, 0);
   }
   70% {
-    clip: rect(64px, 9999px, 98px, 0);
+    clip: rect(65px, 9999px, 3px, 0);
   }
   75% {
-    clip: rect(26px, 9999px, 57px, 0);
+    clip: rect(67px, 9999px, 65px, 0);
   }
   80% {
-    clip: rect(93px, 9999px, 17px, 0);
+    clip: rect(32px, 9999px, 6px, 0);
   }
   85% {
-    clip: rect(5px, 9999px, 22px, 0);
+    clip: rect(17px, 9999px, 13px, 0);
   }
   90% {
-    clip: rect(50px, 9999px, 64px, 0);
+    clip: rect(49px, 9999px, 90px, 0);
   }
   95% {
-    clip: rect(78px, 9999px, 43px, 0);
+    clip: rect(79px, 9999px, 81px, 0);
   }
   100% {
-    clip: rect(100px, 9999px, 59px, 0);
+    clip: rect(83px, 9999px, 14px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(2px, 9999px, 69px, 0);
+    clip: rect(54px, 9999px, 77px, 0);
   }
   5% {
-    clip: rect(14px, 9999px, 75px, 0);
+    clip: rect(46px, 9999px, 77px, 0);
   }
   10% {
-    clip: rect(2px, 9999px, 24px, 0);
+    clip: rect(45px, 9999px, 57px, 0);
   }
   15% {
-    clip: rect(93px, 9999px, 100px, 0);
+    clip: rect(51px, 9999px, 34px, 0);
   }
   20% {
-    clip: rect(46px, 9999px, 81px, 0);
+    clip: rect(65px, 9999px, 13px, 0);
   }
   25% {
-    clip: rect(18px, 9999px, 65px, 0);
+    clip: rect(53px, 9999px, 42px, 0);
   }
   30% {
-    clip: rect(1px, 9999px, 60px, 0);
+    clip: rect(4px, 9999px, 84px, 0);
   }
   35% {
-    clip: rect(20px, 9999px, 12px, 0);
+    clip: rect(14px, 9999px, 100px, 0);
   }
   40% {
-    clip: rect(60px, 9999px, 48px, 0);
+    clip: rect(23px, 9999px, 46px, 0);
   }
   45% {
-    clip: rect(8px, 9999px, 32px, 0);
+    clip: rect(4px, 9999px, 55px, 0);
   }
   50% {
-    clip: rect(81px, 9999px, 29px, 0);
+    clip: rect(27px, 9999px, 13px, 0);
   }
   55% {
-    clip: rect(38px, 9999px, 74px, 0);
+    clip: rect(28px, 9999px, 53px, 0);
   }
   60% {
-    clip: rect(88px, 9999px, 10px, 0);
+    clip: rect(76px, 9999px, 69px, 0);
   }
   65% {
-    clip: rect(82px, 9999px, 33px, 0);
+    clip: rect(78px, 9999px, 60px, 0);
   }
   70% {
-    clip: rect(64px, 9999px, 98px, 0);
+    clip: rect(65px, 9999px, 3px, 0);
   }
   75% {
-    clip: rect(26px, 9999px, 57px, 0);
+    clip: rect(67px, 9999px, 65px, 0);
   }
   80% {
-    clip: rect(93px, 9999px, 17px, 0);
+    clip: rect(32px, 9999px, 6px, 0);
   }
   85% {
-    clip: rect(5px, 9999px, 22px, 0);
+    clip: rect(17px, 9999px, 13px, 0);
   }
   90% {
-    clip: rect(50px, 9999px, 64px, 0);
+    clip: rect(49px, 9999px, 90px, 0);
   }
   95% {
-    clip: rect(78px, 9999px, 43px, 0);
+    clip: rect(79px, 9999px, 81px, 0);
   }
   100% {
-    clip: rect(100px, 9999px, 59px, 0);
+    clip: rect(83px, 9999px, 14px, 0);
   }
 }
 
@@ -437,5 +448,235 @@ body.modal-open .container-fluid {
 
 .fifth:hover:after {
   width: 110%;
+}
+
+.blog-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1rem auto;
+  -webkit-box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1.6%;
+  background: #fff;
+  line-height: 1.4;
+  font-family: sans-serif;
+  border-radius: 5px;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.blog-card a {
+  color: inherit;
+}
+
+.blog-card a:hover {
+  color: #5ad67d;
+}
+
+.blog-card:hover .photo {
+  -webkit-transform: scale(1.3) rotate(3deg);
+          transform: scale(1.3) rotate(3deg);
+}
+
+.blog-card .meta {
+  position: relative;
+  z-index: 0;
+  height: 200px;
+}
+
+.blog-card .photo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  -webkit-transition: -webkit-transform .2s;
+  transition: -webkit-transform .2s;
+  transition: transform .2s;
+  transition: transform .2s, -webkit-transform .2s;
+}
+
+.blog-card .details,
+.blog-card .details ul {
+  margin: auto;
+  padding: 0;
+  list-style: none;
+}
+
+.blog-card .details {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -100%;
+  margin: auto;
+  -webkit-transition: left .2s;
+  transition: left .2s;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  font-size: .9rem;
+}
+
+.blog-card .details a {
+  -webkit-text-decoration: dotted underline;
+          text-decoration: dotted underline;
+}
+
+.blog-card .details ul li {
+  display: inline-block;
+}
+
+.blog-card .details .author:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f007";
+}
+
+.blog-card .details .date:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f133";
+}
+
+.blog-card .details .tags ul:before {
+  font-family: FontAwesome;
+  content: "\f02b";
+  margin-right: 10px;
+}
+
+.blog-card .details .tags li {
+  margin-right: 2px;
+}
+
+.blog-card .details .tags li:first-child {
+  margin-left: -4px;
+}
+
+.blog-card .description {
+  padding: 1rem;
+  background: #fff;
+  position: relative;
+  z-index: 1;
+}
+
+.blog-card .description h1,
+.blog-card .description h2 {
+  font-family: Poppins, sans-serif;
+}
+
+.blog-card .description h1 {
+  line-height: 1;
+  margin: 0;
+  font-size: 1.7rem;
+}
+
+.blog-card .description h2 {
+  font-size: 1rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #a2a2a2;
+  margin-top: 5px;
+}
+
+.blog-card .description .read-more {
+  text-align: right;
+}
+
+.blog-card .description .read-more a {
+  color: #5ad67d;
+  display: inline-block;
+  position: relative;
+}
+
+.blog-card .description .read-more a:after {
+  content: "\f061";
+  font-family: FontAwesome;
+  margin-left: -10px;
+  opacity: 0;
+  vertical-align: middle;
+  -webkit-transition: margin .3s, opacity .3s;
+  transition: margin .3s, opacity .3s;
+}
+
+.blog-card .description .read-more a:hover:after {
+  margin-left: 5px;
+  opacity: 1;
+}
+
+.blog-card p {
+  position: relative;
+  margin: 1rem 0 0;
+}
+
+.blog-card p:first-of-type {
+  margin-top: 1.25rem;
+}
+
+.blog-card p:first-of-type:before {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background: #5ad67d;
+  width: 35px;
+  top: -0.75rem;
+  border-radius: 3px;
+}
+
+.blog-card:hover .details {
+  left: 0%;
+}
+
+@media (min-width: 640px) {
+  .blog-card {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 700px;
+  }
+  .blog-card .meta {
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+    height: auto;
+  }
+  .blog-card .description {
+    -ms-flex-preferred-size: 60%;
+        flex-basis: 60%;
+  }
+  .blog-card .description:before {
+    -webkit-transform: skewX(-3deg);
+            transform: skewX(-3deg);
+    content: "";
+    background: #fff;
+    width: 30px;
+    position: absolute;
+    left: -10px;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+  .blog-card.alt {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .blog-card.alt .description:before {
+    left: inherit;
+    right: -10px;
+    -webkit-transform: skew(3deg);
+            transform: skew(3deg);
+  }
+  .blog-card.alt .details {
+    padding-left: 25px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
