--- a/css/events.css
+++ b/css/events.css
@@ -1,6 +1,6 @@
 body {
   background-repeat: no-repeat;
-  background-color: #17141d;
+  background-color: #000;
   overflow-x: hidden;
 }
 
@@ -33,33 +33,156 @@ body {
   height: 100vh;
 }
 
+.event-header {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.glitch {
+  position: relative;
+  margin: 0 auto;
+  color: #c1c1c1;
+  text-align: center;
+  letter-spacing: 0.01em;
+  -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+}
+
+.glitch::before, .glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  background: #17141d;
+  color: #c1c1c1;
+  clip: rect(0, 900px, 0, 0);
+}
+
+.glitch::before {
+  left: 7px;
+  text-shadow: 1px 0 blue;
+  animation: glitch-effect 3s infinite linear alternate-reverse;
+}
+
+.glitch::after {
+  left: 3px;
+  text-shadow: -1px 0 red;
+  animation: glitch-effect 2s infinite linear alternate-reverse;
+}
+
+@-webkit-keyframes glitch-effect {
+  0% {
+    clip: rect(58px, 9999px, 96px, 0);
+  }
+  10% {
+    clip: rect(100px, 9999px, 62px, 0);
+  }
+  20% {
+    clip: rect(69px, 9999px, 22px, 0);
+  }
+  30% {
+    clip: rect(47px, 9999px, 89px, 0);
+  }
+  40% {
+    clip: rect(88px, 9999px, 10px, 0);
+  }
+  50% {
+    clip: rect(85px, 9999px, 48px, 0);
+  }
+  60% {
+    clip: rect(99px, 9999px, 75px, 0);
+  }
+  70% {
+    clip: rect(11px, 9999px, 11px, 0);
+  }
+  80% {
+    clip: rect(20px, 9999px, 85px, 0);
+  }
+  90% {
+    clip: rect(53px, 9999px, 32px, 0);
+  }
+  100% {
+    clip: rect(9px, 9999px, 78px, 0);
+  }
+}
+
+@keyframes glitch-effect {
+  0% {
+    clip: rect(58px, 9999px, 96px, 0);
+  }
+  10% {
+    clip: rect(100px, 9999px, 62px, 0);
+  }
+  20% {
+    clip: rect(69px, 9999px, 22px, 0);
+  }
+  30% {
+    clip: rect(47px, 9999px, 89px, 0);
+  }
+  40% {
+    clip: rect(88px, 9999px, 10px, 0);
+  }
+  50% {
+    clip: rect(85px, 9999px, 48px, 0);
+  }
+  60% {
+    clip: rect(99px, 9999px, 75px, 0);
+  }
+  70% {
+    clip: rect(11px, 9999px, 11px, 0);
+  }
+  80% {
+    clip: rect(20px, 9999px, 85px, 0);
+  }
+  90% {
+    clip: rect(53px, 9999px, 32px, 0);
+  }
+  100% {
+    clip: rect(9px, 9999px, 78px, 0);
+  }
+}
+
 .container2 {
-  height: 300px;
+  height: 340px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   overflow-x: scroll;
-  padding: 20px;
-  padding-left: auto;
+  padding: 40px 0 0 40px;
   overflow-y: hidden;
+  -webkit-box-pack: inherit;
+      -ms-flex-pack: inherit;
+          justify-content: inherit;
 }
 
-.container2::-webkit-scrollbar {
-  height: 0px;
+@media (min-width: 884px) {
+  #workshops .container2 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .container2::-webkit-scrollbar {
   height: 4px;
 }
 
-.container2:hover::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar {
+  width: 4px;
+}
+
+.container2::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
           box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #fff;
+}
+
+.title {
+  color: #fff;
+  font-weight: 300;
 }
 
 .card2 {
@@ -77,6 +200,14 @@ body {
   transition: 0.4s ease-out;
   position: relative;
   left: 0px;
+}
+
+.card2 .title {
+  color: #fff;
+  font-weight: 300;
+  position: absolute;
+  left: 20px;
+  top: 15px;
 }
 
 .card2:not(:first-child) {
@@ -97,14 +228,6 @@ body {
   transition: 0.4s ease-out;
 }
 
-.title {
-  color: #fff;
-  font-weight: 300;
-  position: absolute;
-  left: 20px;
-  top: 15px;
-}
-
 .desc {
   color: #fff;
   font-size: 1rem;
@@ -118,7 +241,31 @@ body {
   transition: all 0.4s linear;
 }
 
-.card2:hover .desc {
+.bttn {
+  height: 40px;
+  opacity: 01;
+  opacity: 0;
+  -webkit-transition: all 0.4s linear;
+  transition: all 0.4s linear;
+  background-color: transparent;
+  color: #fff;
+  position: relative;
+  top: 80%;
+  left: 4%;
+  border: 1px solid #fff;
+  font-size: 0.8rem;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 0 6px #17141d;
+          box-shadow: 0 0 6px #17141d;
+  padding: 0 12px;
+}
+
+.bttn:hover {
+  background-color: #fff;
+  color: #17141d;
+}
+
+.card2:hover .desc, .card2:hover .bttn {
   opacity: 1;
 }
 /*# sourceMappingURL=events.css.map */
