--- a/css/events.css
+++ b/css/events.css
@@ -74,73 +74,73 @@ body {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(58px, 9999px, 96px, 0);
+    clip: rect(53px, 9999px, 68px, 0);
   }
   10% {
-    clip: rect(100px, 9999px, 62px, 0);
+    clip: rect(71px, 9999px, 79px, 0);
   }
   20% {
-    clip: rect(69px, 9999px, 22px, 0);
+    clip: rect(16px, 9999px, 60px, 0);
   }
   30% {
-    clip: rect(47px, 9999px, 89px, 0);
+    clip: rect(34px, 9999px, 10px, 0);
   }
   40% {
-    clip: rect(88px, 9999px, 10px, 0);
+    clip: rect(68px, 9999px, 43px, 0);
   }
   50% {
-    clip: rect(85px, 9999px, 48px, 0);
+    clip: rect(79px, 9999px, 86px, 0);
   }
   60% {
-    clip: rect(99px, 9999px, 75px, 0);
+    clip: rect(43px, 9999px, 85px, 0);
   }
   70% {
-    clip: rect(11px, 9999px, 11px, 0);
+    clip: rect(79px, 9999px, 22px, 0);
   }
   80% {
-    clip: rect(20px, 9999px, 85px, 0);
+    clip: rect(26px, 9999px, 92px, 0);
   }
   90% {
-    clip: rect(53px, 9999px, 32px, 0);
+    clip: rect(83px, 9999px, 62px, 0);
   }
   100% {
-    clip: rect(9px, 9999px, 78px, 0);
+    clip: rect(95px, 9999px, 51px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(58px, 9999px, 96px, 0);
+    clip: rect(53px, 9999px, 68px, 0);
   }
   10% {
-    clip: rect(100px, 9999px, 62px, 0);
+    clip: rect(71px, 9999px, 79px, 0);
   }
   20% {
-    clip: rect(69px, 9999px, 22px, 0);
+    clip: rect(16px, 9999px, 60px, 0);
   }
   30% {
-    clip: rect(47px, 9999px, 89px, 0);
+    clip: rect(34px, 9999px, 10px, 0);
   }
   40% {
-    clip: rect(88px, 9999px, 10px, 0);
+    clip: rect(68px, 9999px, 43px, 0);
   }
   50% {
-    clip: rect(85px, 9999px, 48px, 0);
+    clip: rect(79px, 9999px, 86px, 0);
   }
   60% {
-    clip: rect(99px, 9999px, 75px, 0);
+    clip: rect(43px, 9999px, 85px, 0);
   }
   70% {
-    clip: rect(11px, 9999px, 11px, 0);
+    clip: rect(79px, 9999px, 22px, 0);
   }
   80% {
-    clip: rect(20px, 9999px, 85px, 0);
+    clip: rect(26px, 9999px, 92px, 0);
   }
   90% {
-    clip: rect(53px, 9999px, 32px, 0);
+    clip: rect(83px, 9999px, 62px, 0);
   }
   100% {
-    clip: rect(9px, 9999px, 78px, 0);
+    clip: rect(95px, 9999px, 51px, 0);
   }
 }
 
@@ -257,10 +257,12 @@ body::-webkit-scrollbar {
   border-radius: 6px;
   -webkit-box-shadow: 0 0 6px #17141d;
           box-shadow: 0 0 6px #17141d;
-  padding: 0 12px;
+  padding: 5px 12px;
+  text-decoration: none;
 }
 
 .bttn:hover {
+  text-decoration: none;
   background-color: #fff;
   color: #17141d;
 }
