Individual events template completed

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,18 @@ body {
   background-repeat: no-repeat;
   height: 100vh;
   overflow: hidden;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 #logo {
   max-height: 400px;
 }
 
-#technical-events-con, #non-technical-events-con {
+#technical-events-con,
+#non-technical-events-con {
   height: 40vh;
   background-color: #fff;
   margin: 10px 0px 0px 0px;
@@ -131,133 +136,133 @@ body.modal-open .container-fluid {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(80px, 9999px, 64px, 0);
+    clip: rect(44px, 9999px, 61px, 0);
   }
   5% {
-    clip: rect(41px, 9999px, 59px, 0);
+    clip: rect(56px, 9999px, 22px, 0);
   }
   10% {
-    clip: rect(52px, 9999px, 56px, 0);
+    clip: rect(59px, 9999px, 22px, 0);
   }
   15% {
-    clip: rect(51px, 9999px, 28px, 0);
+    clip: rect(59px, 9999px, 9px, 0);
   }
   20% {
-    clip: rect(69px, 9999px, 41px, 0);
+    clip: rect(44px, 9999px, 88px, 0);
   }
   25% {
-    clip: rect(99px, 9999px, 51px, 0);
+    clip: rect(78px, 9999px, 2px, 0);
   }
   30% {
-    clip: rect(40px, 9999px, 85px, 0);
+    clip: rect(30px, 9999px, 35px, 0);
   }
   35% {
-    clip: rect(27px, 9999px, 79px, 0);
+    clip: rect(51px, 9999px, 62px, 0);
   }
   40% {
-    clip: rect(88px, 9999px, 98px, 0);
+    clip: rect(89px, 9999px, 73px, 0);
   }
   45% {
-    clip: rect(67px, 9999px, 14px, 0);
+    clip: rect(73px, 9999px, 89px, 0);
   }
   50% {
-    clip: rect(38px, 9999px, 58px, 0);
+    clip: rect(36px, 9999px, 83px, 0);
   }
   55% {
-    clip: rect(80px, 9999px, 30px, 0);
+    clip: rect(93px, 9999px, 12px, 0);
   }
   60% {
-    clip: rect(25px, 9999px, 70px, 0);
+    clip: rect(38px, 9999px, 6px, 0);
   }
   65% {
-    clip: rect(42px, 9999px, 33px, 0);
+    clip: rect(70px, 9999px, 37px, 0);
   }
   70% {
-    clip: rect(83px, 9999px, 12px, 0);
+    clip: rect(62px, 9999px, 68px, 0);
   }
   75% {
-    clip: rect(25px, 9999px, 8px, 0);
+    clip: rect(60px, 9999px, 77px, 0);
   }
   80% {
-    clip: rect(28px, 9999px, 90px, 0);
+    clip: rect(70px, 9999px, 7px, 0);
   }
   85% {
-    clip: rect(82px, 9999px, 49px, 0);
+    clip: rect(90px, 9999px, 4px, 0);
   }
   90% {
-    clip: rect(55px, 9999px, 5px, 0);
+    clip: rect(17px, 9999px, 2px, 0);
   }
   95% {
-    clip: rect(75px, 9999px, 52px, 0);
+    clip: rect(16px, 9999px, 48px, 0);
   }
   100% {
-    clip: rect(93px, 9999px, 25px, 0);
+    clip: rect(72px, 9999px, 77px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(80px, 9999px, 64px, 0);
+    clip: rect(44px, 9999px, 61px, 0);
   }
   5% {
-    clip: rect(41px, 9999px, 59px, 0);
+    clip: rect(56px, 9999px, 22px, 0);
   }
   10% {
-    clip: rect(52px, 9999px, 56px, 0);
+    clip: rect(59px, 9999px, 22px, 0);
   }
   15% {
-    clip: rect(51px, 9999px, 28px, 0);
+    clip: rect(59px, 9999px, 9px, 0);
   }
   20% {
-    clip: rect(69px, 9999px, 41px, 0);
+    clip: rect(44px, 9999px, 88px, 0);
   }
   25% {
-    clip: rect(99px, 9999px, 51px, 0);
+    clip: rect(78px, 9999px, 2px, 0);
   }
   30% {
-    clip: rect(40px, 9999px, 85px, 0);
+    clip: rect(30px, 9999px, 35px, 0);
   }
   35% {
-    clip: rect(27px, 9999px, 79px, 0);
+    clip: rect(51px, 9999px, 62px, 0);
   }
   40% {
-    clip: rect(88px, 9999px, 98px, 0);
+    clip: rect(89px, 9999px, 73px, 0);
   }
   45% {
-    clip: rect(67px, 9999px, 14px, 0);
+    clip: rect(73px, 9999px, 89px, 0);
   }
   50% {
-    clip: rect(38px, 9999px, 58px, 0);
+    clip: rect(36px, 9999px, 83px, 0);
   }
   55% {
-    clip: rect(80px, 9999px, 30px, 0);
+    clip: rect(93px, 9999px, 12px, 0);
   }
   60% {
-    clip: rect(25px, 9999px, 70px, 0);
+    clip: rect(38px, 9999px, 6px, 0);
   }
   65% {
-    clip: rect(42px, 9999px, 33px, 0);
+    clip: rect(70px, 9999px, 37px, 0);
   }
   70% {
-    clip: rect(83px, 9999px, 12px, 0);
+    clip: rect(62px, 9999px, 68px, 0);
   }
   75% {
-    clip: rect(25px, 9999px, 8px, 0);
+    clip: rect(60px, 9999px, 77px, 0);
   }
   80% {
-    clip: rect(28px, 9999px, 90px, 0);
+    clip: rect(70px, 9999px, 7px, 0);
   }
   85% {
-    clip: rect(82px, 9999px, 49px, 0);
+    clip: rect(90px, 9999px, 4px, 0);
   }
   90% {
-    clip: rect(55px, 9999px, 5px, 0);
+    clip: rect(17px, 9999px, 2px, 0);
   }
   95% {
-    clip: rect(75px, 9999px, 52px, 0);
+    clip: rect(16px, 9999px, 48px, 0);
   }
   100% {
-    clip: rect(93px, 9999px, 25px, 0);
+    clip: rect(72px, 9999px, 77px, 0);
   }
 }
 
@@ -343,8 +348,8 @@ body.modal-open .container-fluid {
   left: 15px;
   position: absolute;
   top: 18px;
-  -webkit-transition: .2s;
-  transition: .2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
   color: #000;
   cursor: text;
   font-weight: normal;
@@ -355,9 +360,9 @@ body.modal-open .container-fluid {
 .mat-input-outer .border {
   height: 1px;
   background: #000;
-  transition: .3s;
-  -webkit-transition: .3s;
-  -ms-transition: .3s;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -ms-transition: 0.3s;
 }
 
 .mat-input-outer .border::before {
@@ -366,9 +371,9 @@ body.modal-open .container-fluid {
   height: 3px;
   width: 0%;
   background: transparent;
-  transition: .3s;
-  -webkit-transition: .3s;
-  -ms-transition: .3s;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -ms-transition: 0.3s;
   margin: 0 auto;
 }
 
@@ -427,7 +432,7 @@ body.modal-open .container-fluid {
 }
 
 .fifth:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   top: 0;
@@ -497,10 +502,10 @@ body.modal-open .container-fluid {
   left: 0;
   background-size: cover;
   background-position: center;
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
 .blog-card .details,
@@ -516,13 +521,13 @@ body.modal-open .container-fluid {
   bottom: 0;
   left: -100%;
   margin: auto;
-  -webkit-transition: left .2s;
-  transition: left .2s;
+  -webkit-transition: left 0.2s;
+  transition: left 0.2s;
   background: rgba(0, 0, 0, 0.6);
   color: #fff;
   padding: 10px;
   width: 100%;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .blog-card .details a {
@@ -602,8 +607,8 @@ body.modal-open .container-fluid {
   margin-left: -10px;
   opacity: 0;
   vertical-align: middle;
-  -webkit-transition: margin .3s, opacity .3s;
-  transition: margin .3s, opacity .3s;
+  -webkit-transition: margin 0.3s, opacity 0.3s;
+  transition: margin 0.3s, opacity 0.3s;
 }
 
 .blog-card .description .read-more a:hover:after {
