--- a/css/event.scss
+++ b/css/event.scss
@@ -7,6 +7,7 @@ body {
   // background-image: radial-gradient(#17141d, #fff) !important;
   // height: 100vh;
   overflow-x: hidden;
+  user-select: none;
 }
 #particle-bg {
   position: fixed;
@@ -19,9 +20,163 @@ body {
 #nav-bar {
   position: fixed;
   z-index: 5;
+  width: 100%;
+  height: 100px;
 }
 .hackerz-brand {
   font-size: 1.2em;
   position: relative;
   top: 18px;
+}
+
+#event-info,
+#register {
+  background-color: #17141d;
+  // background-color: #fff;
+  border-radius: 10px;
+  box-shadow: -1rem 0 1rem #000;
+  // margin: 6% 12px 0 12px;
+  // opacity: 0.8;
+  color: #fff;
+  border: 1px solid #fff;
+  margin-left: -5px;
+  padding: 12px;
+}
+.mat-input-outer {
+  display: table;
+  position: relative;
+  margin: 22px 0px;
+  // width: 80%;
+}
+.mat-input-outer input {
+  font-size: 16px;
+  height: 50px;
+  border-radius: 3px;
+  border: none;
+  width: 100%;
+  padding: 0 15px;
+  // font-size: 20px;
+}
+.mat-input-outer input:focus {
+  border: 2px solid #fff;
+}
+.mat-input-outer label {
+  font-size: 14px;
+  left: 15px;
+  position: absolute;
+  top: 18px;
+  transition: 0.2s;
+  color: #000;
+  cursor: text;
+  font-weight: normal;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+}
+.mat-input-outer .border {
+  height: 1px;
+  background: #000;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -ms-transition: 0.3s;
+}
+.mat-input-outer .border::before {
+  content: " ";
+  display: table;
+  height: 3px;
+  width: 0%;
+  background: transparent;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -ms-transition: 0.3s;
+  margin: 0 auto;
+}
+.mat-input-outer input:focus ~ .border {
+  background: transparent;
+}
+.mat-input-outer input:focus ~ .border::before {
+  width: 100%;
+  background: #fff;
+}
+.mat-input-outer input + label.active {
+  left: 5px;
+  top: -25px;
+  color: #fff;
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+#event-container {
+  padding-top: 2%;
+  height: 100vh;
+}
+hr {
+  background: #fff;
+}
+.event-title {
+  font-size: 2rem;
+}
+.event-reg-header {
+  font-size: 1.2rem;
+  margin-top: 4px;
+}
+#event-info {
+  height: 80%;
+  overflow-y: scroll;
+}
+.rules {
+  font-weight: bold;
+}
+#register {
+  min-height: 50%;
+}
+@media (max-width: 766px) {
+  #register {
+    height: 400px;
+    margin-bottom: 10%;
+  }
+  #event-info {
+    height: 80%;
+    margin: 20px;
+    margin-top: 25%;
+  }
+  #nav-bar {
+    background-color: #000;
+  }
+}
+body::-webkit-scrollbar-thumb,
+#event-info::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+  // background-image: linear-gradient(#005c97, #363795);
+}
+body::-webkit-scrollbar,
+#event-info::-webkit-scrollbar {
+  width: 4px;
+}
+.bttn {
+  height: 40px;
+  // opacity: 01;
+  // opacity: 0;
+  transition: all 0.4s linear;
+  background-color: transparent;
+  color: #fff;
+  // position: relative;
+  // top: 80%;
+  // left: 4%;
+  border: 1px solid #fff;
+  font-size: 0.8rem;
+  border-radius: 6px;
+  box-shadow: 0 0 6px #17141d;
+  // width: 30%;
+  padding: 5px 12px;
+  text-decoration: none;
+}
+.bttn:hover {
+  text-decoration: none;
+  background-color: #fff;
+  color: #17141d;
+}
+button:focus,
+input:focus {
+  outline: 0;
 }
