--- a/css/events.css
+++ b/css/events.css
@@ -2,6 +2,10 @@ body {
   background-repeat: no-repeat;
   background-color: #000;
   overflow-x: hidden;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 #logo {
@@ -74,73 +78,73 @@ body {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(53px, 9999px, 68px, 0);
+    clip: rect(50px, 9999px, 33px, 0);
   }
   10% {
-    clip: rect(71px, 9999px, 79px, 0);
+    clip: rect(90px, 9999px, 32px, 0);
   }
   20% {
-    clip: rect(16px, 9999px, 60px, 0);
+    clip: rect(31px, 9999px, 100px, 0);
   }
   30% {
-    clip: rect(34px, 9999px, 10px, 0);
+    clip: rect(13px, 9999px, 21px, 0);
   }
   40% {
-    clip: rect(68px, 9999px, 43px, 0);
+    clip: rect(27px, 9999px, 86px, 0);
   }
   50% {
-    clip: rect(79px, 9999px, 86px, 0);
+    clip: rect(65px, 9999px, 34px, 0);
   }
   60% {
-    clip: rect(43px, 9999px, 85px, 0);
+    clip: rect(8px, 9999px, 6px, 0);
   }
   70% {
-    clip: rect(79px, 9999px, 22px, 0);
+    clip: rect(34px, 9999px, 29px, 0);
   }
   80% {
-    clip: rect(26px, 9999px, 92px, 0);
+    clip: rect(38px, 9999px, 37px, 0);
   }
   90% {
-    clip: rect(83px, 9999px, 62px, 0);
+    clip: rect(22px, 9999px, 66px, 0);
   }
   100% {
-    clip: rect(95px, 9999px, 51px, 0);
+    clip: rect(44px, 9999px, 55px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(53px, 9999px, 68px, 0);
+    clip: rect(50px, 9999px, 33px, 0);
   }
   10% {
-    clip: rect(71px, 9999px, 79px, 0);
+    clip: rect(90px, 9999px, 32px, 0);
   }
   20% {
-    clip: rect(16px, 9999px, 60px, 0);
+    clip: rect(31px, 9999px, 100px, 0);
   }
   30% {
-    clip: rect(34px, 9999px, 10px, 0);
+    clip: rect(13px, 9999px, 21px, 0);
   }
   40% {
-    clip: rect(68px, 9999px, 43px, 0);
+    clip: rect(27px, 9999px, 86px, 0);
   }
   50% {
-    clip: rect(79px, 9999px, 86px, 0);
+    clip: rect(65px, 9999px, 34px, 0);
   }
   60% {
-    clip: rect(43px, 9999px, 85px, 0);
+    clip: rect(8px, 9999px, 6px, 0);
   }
   70% {
-    clip: rect(79px, 9999px, 22px, 0);
+    clip: rect(34px, 9999px, 29px, 0);
   }
   80% {
-    clip: rect(26px, 9999px, 92px, 0);
+    clip: rect(38px, 9999px, 37px, 0);
   }
   90% {
-    clip: rect(83px, 9999px, 62px, 0);
+    clip: rect(22px, 9999px, 66px, 0);
   }
   100% {
-    clip: rect(95px, 9999px, 51px, 0);
+    clip: rect(44px, 9999px, 55px, 0);
   }
 }
 
@@ -173,7 +177,8 @@ body::-webkit-scrollbar {
   width: 4px;
 }
 
-.container2::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb {
+.container2::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
           box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -267,7 +272,12 @@ body::-webkit-scrollbar {
   color: #17141d;
 }
 
-.card2:hover .desc, .card2:hover .bttn {
+.card2:hover .desc,
+.card2:hover .bttn {
   opacity: 1;
+}
+
+button:focus {
+  outline: 0;
 }
 /*# sourceMappingURL=events.css.map */
