--- a/css/events.scss
+++ b/css/events.scss
@@ -1,41 +1,41 @@
 body {
-    // background: radial-gradient(#f1f1f1, #acacac);
-    //   background: radial-gradient(#e66465, #9198e5);
-    // background: #fff;
-    background-repeat: no-repeat;
-    background-color:  #000;
-    // background-image: radial-gradient(#17141d, #fff) !important;
-    // height: 100vh;
-    overflow-x: hidden;
-  }
-  #logo {
-    max-height: 400px;
-    position: fixed;
-    z-index: -5;
-    
-  }
-  
-  #particle-bg{
-    position: fixed;
-    z-index: -3;
-    height: 100vh;
-    left: 0;
-    right: 0;
-  }
+  // background: radial-gradient(#f1f1f1, #acacac);
+  //   background: radial-gradient(#e66465, #9198e5);
+  // background: #fff;
+  background-repeat: no-repeat;
+  background-color: #000;
+  // background-image: radial-gradient(#17141d, #fff) !important;
+  // height: 100vh;
+  overflow-x: hidden;
+  user-select: none;
+}
+#logo {
+  max-height: 400px;
+  position: fixed;
+  z-index: -5;
+}
 
-#nav-bar{
+#particle-bg {
+  position: fixed;
+  z-index: -3;
+  height: 100vh;
+  left: 0;
+  right: 0;
+}
+
+#nav-bar {
   position: fixed;
   z-index: 5;
 }
-.hackerz-brand{
+.hackerz-brand {
   font-size: 1.2em;
   position: relative;
   top: 18px;
 }
-.event-container{
+.event-container {
   height: 100vh;
 }
-.event-header{
+.event-header {
   // line-height: 1.5;
   // margin-left: 2%;
   font-size: 2rem;
@@ -88,46 +88,45 @@ $steps: 10;
     }
   }
 }
-  .container2 {
-    // position: absolute;
-    height: 340px;
-    // height: 30vh;
-    // width: 100vw;
-    // top: 60px;
-    // left: calc(50% - 300px);
-    display: flex;
-    overflow-x: scroll;
-    padding: 40px 0 0 40px;
-    overflow-y: hidden;
-    justify-content: inherit;
-  }
-  @media(min-width: 884px){
-
-    #workshops{
-      .container2{
-        justify-content: center;
-      }
+.container2 {
+  // position: absolute;
+  height: 340px;
+  // height: 30vh;
+  // width: 100vw;
+  // top: 60px;
+  // left: calc(50% - 300px);
+  display: flex;
+  overflow-x: scroll;
+  padding: 40px 0 0 40px;
+  overflow-y: hidden;
+  justify-content: inherit;
+}
+@media (min-width: 884px) {
+  #workshops {
+    .container2 {
+      justify-content: center;
     }
   }
+}
 
-  // .container2::-webkit-scrollbar {
-  //   height: 0px;
-  // }
-  .container2::-webkit-scrollbar {
-    height: 4px;
-    
-  }
-  body::-webkit-scrollbar{
-    width: 4px;
-  }
-  
-  .container2::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #fff;
-    // background-image: linear-gradient(#005c97, #363795);
-  }
-  
+// .container2::-webkit-scrollbar {
+//   height: 0px;
+// }
+.container2::-webkit-scrollbar {
+  height: 4px;
+}
+body::-webkit-scrollbar {
+  width: 4px;
+}
+
+.container2::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+  // background-image: linear-gradient(#005c97, #363795);
+}
+
 // #non-technical, #technical, #workshops{
 //     height: 41vh;
 //     background-color: rgba($color: #fff, $alpha: 0.3);
@@ -155,7 +154,7 @@ $steps: 10;
   // background-image: url(../images/main.png);
   border-radius: 10px;
   box-shadow: -1rem 0 1rem #000;
-/*   margin-left: -50px; */
+  /*   margin-left: -50px; */
   transition: 0.4s ease-out;
   position: relative;
   left: 0px;
@@ -182,7 +181,7 @@ $steps: 10;
 //   }
 // }
 .card2:not(:first-child) {
-    margin-left: -50px;
+  margin-left: -50px;
 }
 
 .card2:hover {
@@ -190,17 +189,13 @@ $steps: 10;
   transition: 0.9s ease-out;
 }
 
-
-
 .card2:hover ~ .card2 {
   position: relative;
   left: 50px;
   transition: 0.4s ease-out;
 }
 
-
-
-.desc{
+.desc {
   color: #fff;
   font-size: 1rem;
   margin: 5px;
@@ -211,7 +206,7 @@ $steps: 10;
   opacity: 0;
   transition: all 0.4s linear;
 }
-.bttn{
+.bttn {
   height: 40px;
   opacity: 01;
   opacity: 0;
@@ -228,15 +223,18 @@ $steps: 10;
   // width: 30%;
   padding: 5px 12px;
   text-decoration: none;
-  
 }
-.bttn:hover{
+.bttn:hover {
   text-decoration: none;
   background-color: #fff;
   color: #17141d;
 }
-.card2:hover{ 
-  .desc, .bttn{
+.card2:hover {
+  .desc,
+  .bttn {
     opacity: 1;
   }
+}
+button:focus {
+  outline: 0;
 }
