--- a/css/events.css
+++ b/css/events.css
@@ -78,73 +78,73 @@ body {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(50px, 9999px, 33px, 0);
+    clip: rect(54px, 9999px, 87px, 0);
   }
   10% {
-    clip: rect(90px, 9999px, 32px, 0);
+    clip: rect(69px, 9999px, 48px, 0);
   }
   20% {
-    clip: rect(31px, 9999px, 100px, 0);
+    clip: rect(38px, 9999px, 55px, 0);
   }
   30% {
-    clip: rect(13px, 9999px, 21px, 0);
+    clip: rect(48px, 9999px, 57px, 0);
   }
   40% {
-    clip: rect(27px, 9999px, 86px, 0);
+    clip: rect(57px, 9999px, 68px, 0);
   }
   50% {
-    clip: rect(65px, 9999px, 34px, 0);
+    clip: rect(51px, 9999px, 20px, 0);
   }
   60% {
-    clip: rect(8px, 9999px, 6px, 0);
+    clip: rect(2px, 9999px, 30px, 0);
   }
   70% {
-    clip: rect(34px, 9999px, 29px, 0);
+    clip: rect(42px, 9999px, 23px, 0);
   }
   80% {
-    clip: rect(38px, 9999px, 37px, 0);
+    clip: rect(59px, 9999px, 67px, 0);
   }
   90% {
-    clip: rect(22px, 9999px, 66px, 0);
+    clip: rect(45px, 9999px, 26px, 0);
   }
   100% {
-    clip: rect(44px, 9999px, 55px, 0);
+    clip: rect(78px, 9999px, 34px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(50px, 9999px, 33px, 0);
+    clip: rect(54px, 9999px, 87px, 0);
   }
   10% {
-    clip: rect(90px, 9999px, 32px, 0);
+    clip: rect(69px, 9999px, 48px, 0);
   }
   20% {
-    clip: rect(31px, 9999px, 100px, 0);
+    clip: rect(38px, 9999px, 55px, 0);
   }
   30% {
-    clip: rect(13px, 9999px, 21px, 0);
+    clip: rect(48px, 9999px, 57px, 0);
   }
   40% {
-    clip: rect(27px, 9999px, 86px, 0);
+    clip: rect(57px, 9999px, 68px, 0);
   }
   50% {
-    clip: rect(65px, 9999px, 34px, 0);
+    clip: rect(51px, 9999px, 20px, 0);
   }
   60% {
-    clip: rect(8px, 9999px, 6px, 0);
+    clip: rect(2px, 9999px, 30px, 0);
   }
   70% {
-    clip: rect(34px, 9999px, 29px, 0);
+    clip: rect(42px, 9999px, 23px, 0);
   }
   80% {
-    clip: rect(38px, 9999px, 37px, 0);
+    clip: rect(59px, 9999px, 67px, 0);
   }
   90% {
-    clip: rect(22px, 9999px, 66px, 0);
+    clip: rect(45px, 9999px, 26px, 0);
   }
   100% {
-    clip: rect(44px, 9999px, 55px, 0);
+    clip: rect(78px, 9999px, 34px, 0);
   }
 }
 
@@ -173,12 +173,14 @@ body {
   height: 4px;
 }
 
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,
+.modal::-webkit-scrollbar {
   width: 4px;
 }
 
 .container2::-webkit-scrollbar-thumb,
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+.modal::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
           box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -200,7 +202,6 @@ body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: -1rem 0 1rem #000;
           box-shadow: -1rem 0 1rem #000;
-  /*   margin-left: -50px; */
   -webkit-transition: 0.4s ease-out;
   transition: 0.4s ease-out;
   position: relative;
@@ -264,6 +265,7 @@ body::-webkit-scrollbar-thumb {
           box-shadow: 0 0 6px #17141d;
   padding: 5px 12px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .bttn:hover {
