--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
-  background: radial-gradient(#f1f1f1, #acacac);
+  background-color: #17141d;
   background-repeat: no-repeat;
-  height: 100vh;
   overflow: hidden;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -10,42 +9,15 @@ body {
 }
 
 #logo {
-  max-height: 400px;
-}
-
-#technical-events-con,
-#non-technical-events-con {
-  height: 40vh;
-  background-color: #fff;
-  margin: 10px 0px 0px 0px;
-}
-
-#technical-events-con {
-  color: #000;
-}
-
-#non-technical-events-con {
-  color: #000;
-}
-
-#log-reg-body {
-  -webkit-box-shadow: 0px 0px 13px #212121;
-          box-shadow: 0px 0px 13px #212121;
+  max-height: 200px;
 }
 
 #logo-container {
-  -webkit-filter: invert(100%);
-          filter: invert(100%);
   height: 100vh;
 }
 
 #timer {
   font-size: 2rem;
-}
-
-.nav-item {
-  color: #0a557b !important;
-  margin-right: 20px;
 }
 
 #particle-bg {
@@ -89,15 +61,6 @@ div#centerDiv {
   cursor: pointer;
 }
 
-body.modal-open .container-fluid {
-  -webkit-filter: blur(4px);
-  -moz-filter: blur(4px);
-  -o-filter: blur(4px);
-  -ms-filter: blur(4px);
-  filter: blur(4px);
-  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
-}
-
 .glitch {
   position: relative;
   margin: 0 auto;
@@ -136,133 +99,133 @@ body.modal-open .container-fluid {
 
 @-webkit-keyframes glitch-effect {
   0% {
-    clip: rect(44px, 9999px, 61px, 0);
+    clip: rect(37px, 9999px, 17px, 0);
   }
   5% {
-    clip: rect(56px, 9999px, 22px, 0);
+    clip: rect(93px, 9999px, 19px, 0);
   }
   10% {
-    clip: rect(59px, 9999px, 22px, 0);
+    clip: rect(12px, 9999px, 59px, 0);
   }
   15% {
-    clip: rect(59px, 9999px, 9px, 0);
+    clip: rect(99px, 9999px, 61px, 0);
   }
   20% {
-    clip: rect(44px, 9999px, 88px, 0);
+    clip: rect(22px, 9999px, 14px, 0);
   }
   25% {
-    clip: rect(78px, 9999px, 2px, 0);
+    clip: rect(68px, 9999px, 37px, 0);
   }
   30% {
-    clip: rect(30px, 9999px, 35px, 0);
+    clip: rect(71px, 9999px, 23px, 0);
   }
   35% {
-    clip: rect(51px, 9999px, 62px, 0);
+    clip: rect(25px, 9999px, 74px, 0);
   }
   40% {
-    clip: rect(89px, 9999px, 73px, 0);
+    clip: rect(75px, 9999px, 86px, 0);
   }
   45% {
-    clip: rect(73px, 9999px, 89px, 0);
+    clip: rect(37px, 9999px, 48px, 0);
   }
   50% {
-    clip: rect(36px, 9999px, 83px, 0);
+    clip: rect(99px, 9999px, 3px, 0);
   }
   55% {
-    clip: rect(93px, 9999px, 12px, 0);
+    clip: rect(30px, 9999px, 85px, 0);
   }
   60% {
-    clip: rect(38px, 9999px, 6px, 0);
+    clip: rect(28px, 9999px, 33px, 0);
   }
   65% {
-    clip: rect(70px, 9999px, 37px, 0);
+    clip: rect(77px, 9999px, 62px, 0);
   }
   70% {
-    clip: rect(62px, 9999px, 68px, 0);
+    clip: rect(18px, 9999px, 17px, 0);
   }
   75% {
-    clip: rect(60px, 9999px, 77px, 0);
+    clip: rect(57px, 9999px, 43px, 0);
   }
   80% {
-    clip: rect(70px, 9999px, 7px, 0);
+    clip: rect(49px, 9999px, 29px, 0);
   }
   85% {
-    clip: rect(90px, 9999px, 4px, 0);
+    clip: rect(51px, 9999px, 83px, 0);
   }
   90% {
-    clip: rect(17px, 9999px, 2px, 0);
+    clip: rect(45px, 9999px, 13px, 0);
   }
   95% {
-    clip: rect(16px, 9999px, 48px, 0);
+    clip: rect(30px, 9999px, 99px, 0);
   }
   100% {
-    clip: rect(72px, 9999px, 77px, 0);
+    clip: rect(69px, 9999px, 36px, 0);
   }
 }
 
 @keyframes glitch-effect {
   0% {
-    clip: rect(44px, 9999px, 61px, 0);
+    clip: rect(37px, 9999px, 17px, 0);
   }
   5% {
-    clip: rect(56px, 9999px, 22px, 0);
+    clip: rect(93px, 9999px, 19px, 0);
   }
   10% {
-    clip: rect(59px, 9999px, 22px, 0);
+    clip: rect(12px, 9999px, 59px, 0);
   }
   15% {
-    clip: rect(59px, 9999px, 9px, 0);
+    clip: rect(99px, 9999px, 61px, 0);
   }
   20% {
-    clip: rect(44px, 9999px, 88px, 0);
+    clip: rect(22px, 9999px, 14px, 0);
   }
   25% {
-    clip: rect(78px, 9999px, 2px, 0);
+    clip: rect(68px, 9999px, 37px, 0);
   }
   30% {
-    clip: rect(30px, 9999px, 35px, 0);
+    clip: rect(71px, 9999px, 23px, 0);
   }
   35% {
-    clip: rect(51px, 9999px, 62px, 0);
+    clip: rect(25px, 9999px, 74px, 0);
   }
   40% {
-    clip: rect(89px, 9999px, 73px, 0);
+    clip: rect(75px, 9999px, 86px, 0);
   }
   45% {
-    clip: rect(73px, 9999px, 89px, 0);
+    clip: rect(37px, 9999px, 48px, 0);
   }
   50% {
-    clip: rect(36px, 9999px, 83px, 0);
+    clip: rect(99px, 9999px, 3px, 0);
   }
   55% {
-    clip: rect(93px, 9999px, 12px, 0);
+    clip: rect(30px, 9999px, 85px, 0);
   }
   60% {
-    clip: rect(38px, 9999px, 6px, 0);
+    clip: rect(28px, 9999px, 33px, 0);
   }
   65% {
-    clip: rect(70px, 9999px, 37px, 0);
+    clip: rect(77px, 9999px, 62px, 0);
   }
   70% {
-    clip: rect(62px, 9999px, 68px, 0);
+    clip: rect(18px, 9999px, 17px, 0);
   }
   75% {
-    clip: rect(60px, 9999px, 77px, 0);
+    clip: rect(57px, 9999px, 43px, 0);
   }
   80% {
-    clip: rect(70px, 9999px, 7px, 0);
+    clip: rect(49px, 9999px, 29px, 0);
   }
   85% {
-    clip: rect(90px, 9999px, 4px, 0);
+    clip: rect(51px, 9999px, 83px, 0);
   }
   90% {
-    clip: rect(17px, 9999px, 2px, 0);
+    clip: rect(45px, 9999px, 13px, 0);
   }
   95% {
-    clip: rect(16px, 9999px, 48px, 0);
+    clip: rect(30px, 9999px, 99px, 0);
   }
   100% {
-    clip: rect(72px, 9999px, 77px, 0);
+    clip: rect(69px, 9999px, 36px, 0);
   }
 }
 
@@ -322,366 +285,6 @@ body.modal-open .container-fluid {
   100% {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
-  }
-}
-
-.mat-input-outer {
-  display: table;
-  position: relative;
-  margin: 22px;
-}
-
-.mat-input-outer input {
-  height: 50px;
-  border-radius: 3px;
-  border: none;
-  width: 100%;
-  padding: 0 15px;
-}
-
-.mat-input-outer input:focus {
-  border: 2px solid #0a557b;
-}
-
-.mat-input-outer label {
-  font-size: 14px;
-  left: 15px;
-  position: absolute;
-  top: 18px;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-  color: #000;
-  cursor: text;
-  font-weight: normal;
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-}
-
-.mat-input-outer .border {
-  height: 1px;
-  background: #000;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -ms-transition: 0.3s;
-}
-
-.mat-input-outer .border::before {
-  content: " ";
-  display: table;
-  height: 3px;
-  width: 0%;
-  background: transparent;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -ms-transition: 0.3s;
-  margin: 0 auto;
-}
-
-.mat-input-outer input:focus ~ .border {
-  background: transparent;
-}
-
-.mat-input-outer input:focus ~ .border::before {
-  width: 100%;
-  background: #0a557b;
-}
-
-.mat-input-outer input + label.active {
-  left: 5px;
-  top: -25px;
-  color: #0a557b;
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-
-.btn2 {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background-color: transparent;
-  border: 1.5px solid #0a557b;
-  border-radius: 4px;
-  cursor: pointer;
-  display: inline;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  font-size: 1rem;
-  margin: 20px;
-  padding: 12px;
-  text-decoration: none;
-  text-align: center;
-}
-
-.btn2:hover, .btn2:focus {
-  color: #fff;
-  outline: 0;
-}
-
-.fifth {
-  border-color: #0a557b;
-  border-radius: 5px;
-  color: #0a557b;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  -webkit-transition: color 150ms ease-in-out;
-  transition: color 150ms ease-in-out;
-}
-
-.fifth:after {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 0;
-  height: 100%;
-  background: #0a557b;
-  z-index: -1;
-  -webkit-transition: width 150ms ease-in-out;
-  transition: width 150ms ease-in-out;
-}
-
-.fifth:hover {
-  color: #fff;
-}
-
-.fifth:hover:after {
-  width: 110%;
-}
-
-.blog-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin: 1rem auto;
-  -webkit-box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
-  margin-bottom: 1.6%;
-  background: #fff;
-  line-height: 1.4;
-  font-family: sans-serif;
-  border-radius: 5px;
-  overflow: hidden;
-  z-index: 0;
-}
-
-.blog-card a {
-  color: inherit;
-}
-
-.blog-card a:hover {
-  color: #5ad67d;
-}
-
-.blog-card:hover .photo {
-  -webkit-transform: scale(1.3) rotate(3deg);
-          transform: scale(1.3) rotate(3deg);
-}
-
-.blog-card .meta {
-  position: relative;
-  z-index: 0;
-  height: 200px;
-}
-
-.blog-card .photo {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-size: cover;
-  background-position: center;
-  -webkit-transition: -webkit-transform 0.2s;
-  transition: -webkit-transform 0.2s;
-  transition: transform 0.2s;
-  transition: transform 0.2s, -webkit-transform 0.2s;
-}
-
-.blog-card .details,
-.blog-card .details ul {
-  margin: auto;
-  padding: 0;
-  list-style: none;
-}
-
-.blog-card .details {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: -100%;
-  margin: auto;
-  -webkit-transition: left 0.2s;
-  transition: left 0.2s;
-  background: rgba(0, 0, 0, 0.6);
-  color: #fff;
-  padding: 10px;
-  width: 100%;
-  font-size: 0.9rem;
-}
-
-.blog-card .details a {
-  -webkit-text-decoration: dotted underline;
-          text-decoration: dotted underline;
-}
-
-.blog-card .details ul li {
-  display: inline-block;
-}
-
-.blog-card .details .author:before {
-  font-family: FontAwesome;
-  margin-right: 10px;
-  content: "\f007";
-}
-
-.blog-card .details .date:before {
-  font-family: FontAwesome;
-  margin-right: 10px;
-  content: "\f133";
-}
-
-.blog-card .details .tags ul:before {
-  font-family: FontAwesome;
-  content: "\f02b";
-  margin-right: 10px;
-}
-
-.blog-card .details .tags li {
-  margin-right: 2px;
-}
-
-.blog-card .details .tags li:first-child {
-  margin-left: -4px;
-}
-
-.blog-card .description {
-  padding: 1rem;
-  background: #fff;
-  position: relative;
-  z-index: 1;
-}
-
-.blog-card .description h1,
-.blog-card .description h2 {
-  font-family: Poppins, sans-serif;
-}
-
-.blog-card .description h1 {
-  line-height: 1;
-  margin: 0;
-  font-size: 1.7rem;
-}
-
-.blog-card .description h2 {
-  font-size: 1rem;
-  font-weight: 300;
-  text-transform: uppercase;
-  color: #a2a2a2;
-  margin-top: 5px;
-}
-
-.blog-card .description .read-more {
-  text-align: right;
-}
-
-.blog-card .description .read-more a {
-  color: #5ad67d;
-  display: inline-block;
-  position: relative;
-}
-
-.blog-card .description .read-more a:after {
-  content: "\f061";
-  font-family: FontAwesome;
-  margin-left: -10px;
-  opacity: 0;
-  vertical-align: middle;
-  -webkit-transition: margin 0.3s, opacity 0.3s;
-  transition: margin 0.3s, opacity 0.3s;
-}
-
-.blog-card .description .read-more a:hover:after {
-  margin-left: 5px;
-  opacity: 1;
-}
-
-.blog-card p {
-  position: relative;
-  margin: 1rem 0 0;
-}
-
-.blog-card p:first-of-type {
-  margin-top: 1.25rem;
-}
-
-.blog-card p:first-of-type:before {
-  content: "";
-  position: absolute;
-  height: 5px;
-  background: #5ad67d;
-  width: 35px;
-  top: -0.75rem;
-  border-radius: 3px;
-}
-
-.blog-card:hover .details {
-  left: 0%;
-}
-
-@media (min-width: 640px) {
-  .blog-card {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    max-width: 700px;
-  }
-  .blog-card .meta {
-    -ms-flex-preferred-size: 40%;
-        flex-basis: 40%;
-    height: auto;
-  }
-  .blog-card .description {
-    -ms-flex-preferred-size: 60%;
-        flex-basis: 60%;
-  }
-  .blog-card .description:before {
-    -webkit-transform: skewX(-3deg);
-            transform: skewX(-3deg);
-    content: "";
-    background: #fff;
-    width: 30px;
-    position: absolute;
-    left: -10px;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
-  }
-  .blog-card.alt {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-  }
-  .blog-card.alt .description:before {
-    left: inherit;
-    right: -10px;
-    -webkit-transform: skew(3deg);
-            transform: skew(3deg);
-  }
-  .blog-card.alt .details {
-    padding-left: 25px;
   }
 }
 /*# sourceMappingURL=style.css.map */
