--- a/css/style.scss
+++ b/css/style.scss
@@ -1,40 +1,17 @@
 body {
-  background: radial-gradient(#f1f1f1, #acacac);
-  //   background: radial-gradient(#e66465, #9198e5);
-  // background: #fff;
+  background-color: #17141d;
   background-repeat: no-repeat;
-  height: 100vh;
   overflow: hidden;
   user-select: none;
 }
 #logo {
-  max-height: 400px;
-}
-#technical-events-con,
-#non-technical-events-con {
-  height: 40vh;
-  background-color: #fff;
-  margin: 10px 0px 0px 0px;
-}
-#technical-events-con {
-  color: #000;
-}
-#non-technical-events-con {
-  color: #000;
-}
-#log-reg-body {
-  box-shadow: 0px 0px 13px #212121;
+  max-height: 200px;
 }
 #logo-container {
-  filter: invert(100%);
   height: 100vh;
 }
 #timer {
   font-size: 2rem;
-}
-.nav-item {
-  color: #0a557b !important;
-  margin-right: 20px;
 }
 #particle-bg {
   position: fixed;
@@ -73,19 +50,6 @@ div#centerDiv {
   color: #0a557b;
   cursor: pointer;
 }
-
-// .modal-dialog{
-//   background: radial-gradient(#f1f1f1, #acacac);
-// }
-body.modal-open .container-fluid {
-  -webkit-filter: blur(4px);
-  -moz-filter: blur(4px);
-  -o-filter: blur(4px);
-  -ms-filter: blur(4px);
-  filter: blur(4px);
-  // filter: url("https://gist.githubusercontent.com/amitabhaghosh197/b7865b409e835b5a43b5/raw/1a255b551091924971e7dee8935fd38a7fdf7311/blur.svg#blur");
-  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
-}
 $primaryColor: #fff;
 $secondaryColor: #333;
 $steps: 20;
@@ -93,7 +57,6 @@ $steps: 20;
   position: relative;
   margin: 0 auto;
   color: $primaryColor;
-  // font-size: 80px;
   font-family: "Exo", sans-serif;
   font-weight: 600;
   text-align: center;
@@ -166,316 +129,5 @@ $steps: 20;
   }
   100% {
     transform: rotate(360deg);
-  }
-}
-.mat-input-outer {
-  display: table;
-  position: relative;
-  margin: 22px;
-}
-.mat-input-outer input {
-  height: 50px;
-  border-radius: 3px;
-  border: none;
-  width: 100%;
-  padding: 0 15px;
-  // font-size: 20px;
-}
-.mat-input-outer input:focus {
-  border: 2px solid #0a557b;
-}
-.mat-input-outer label {
-  font-size: 14px;
-  left: 15px;
-  position: absolute;
-  top: 18px;
-  transition: 0.2s;
-  color: #000;
-  cursor: text;
-  font-weight: normal;
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-}
-.mat-input-outer .border {
-  height: 1px;
-  background: #000;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -ms-transition: 0.3s;
-}
-.mat-input-outer .border::before {
-  content: " ";
-  display: table;
-  height: 3px;
-  width: 0%;
-  background: transparent;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -ms-transition: 0.3s;
-  margin: 0 auto;
-}
-.mat-input-outer input:focus ~ .border {
-  background: transparent;
-}
-.mat-input-outer input:focus ~ .border::before {
-  width: 100%;
-  background: #0a557b;
-}
-.mat-input-outer input + label.active {
-  left: 5px;
-  top: -25px;
-  color: #0a557b;
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-$purple: #0a557b;
-$red: #e74c3c;
-.btn2 {
-  box-sizing: border-box;
-  appearance: none;
-  background-color: transparent;
-  border: 1.5px solid $purple;
-  border-radius: 4px;
-  cursor: pointer;
-  display: inline;
-  align-self: center;
-  font-size: 1rem;
-  margin: 20px;
-  padding: 12px;
-  text-decoration: none;
-  text-align: center;
-
-  &:hover,
-  &:focus {
-    color: #fff;
-    outline: 0;
-  }
-}
-
-.fifth {
-  border-color: $purple;
-  // border: 0;
-  border-radius: 5px;
-  color: $purple;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  transition: color 150ms ease-in-out;
-
-  &:after {
-    content: "";
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 100%;
-    background: $purple;
-    z-index: -1;
-    transition: width 150ms ease-in-out;
-  }
-
-  &:hover {
-    color: #fff;
-    &:after {
-      width: 110%;
-    }
-  }
-}
-
-$color_white: #fff;
-$color_prime: #5ad67d;
-$color_grey: #e2e2e2;
-$color_grey_dark: #a2a2a2;
-
-.blog-card {
-  display: flex;
-  flex-direction: column;
-  margin: 1rem auto;
-  box-shadow: 0 3px 7px -1px rgba(#000, 0.1);
-  margin-bottom: 1.6%;
-  background: $color_white;
-  line-height: 1.4;
-  font-family: sans-serif;
-  border-radius: 5px;
-  overflow: hidden;
-  z-index: 0;
-  a {
-    color: inherit;
-    &:hover {
-      color: $color_prime;
-    }
-  }
-  &:hover {
-    .photo {
-      transform: scale(1.3) rotate(3deg);
-    }
-  }
-  .meta {
-    position: relative;
-    z-index: 0;
-    height: 200px;
-  }
-  .photo {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-size: cover;
-    background-position: center;
-    transition: transform 0.2s;
-  }
-  .details,
-  .details ul {
-    margin: auto;
-    padding: 0;
-    list-style: none;
-  }
-
-  .details {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: -100%;
-    margin: auto;
-    transition: left 0.2s;
-    background: rgba(#000, 0.6);
-    color: $color_white;
-    padding: 10px;
-    width: 100%;
-    font-size: 0.9rem;
-    a {
-      text-decoration: dotted underline;
-    }
-    ul li {
-      display: inline-block;
-    }
-    .author:before {
-      font-family: FontAwesome;
-      margin-right: 10px;
-      content: "\f007";
-    }
-
-    .date:before {
-      font-family: FontAwesome;
-      margin-right: 10px;
-      content: "\f133";
-    }
-
-    .tags {
-      ul:before {
-        font-family: FontAwesome;
-        content: "\f02b";
-        margin-right: 10px;
-      }
-      li {
-        margin-right: 2px;
-        &:first-child {
-          margin-left: -4px;
-        }
-      }
-    }
-  }
-  .description {
-    padding: 1rem;
-    background: $color_white;
-    position: relative;
-    z-index: 1;
-    h1,
-    h2 {
-      font-family: Poppins, sans-serif;
-    }
-    h1 {
-      line-height: 1;
-      margin: 0;
-      font-size: 1.7rem;
-    }
-    h2 {
-      font-size: 1rem;
-      font-weight: 300;
-      text-transform: uppercase;
-      color: $color_grey_dark;
-      margin-top: 5px;
-    }
-    .read-more {
-      text-align: right;
-      a {
-        color: $color_prime;
-        display: inline-block;
-        position: relative;
-        &:after {
-          content: "\f061";
-          font-family: FontAwesome;
-          margin-left: -10px;
-          opacity: 0;
-          vertical-align: middle;
-          transition: margin 0.3s, opacity 0.3s;
-        }
-
-        &:hover:after {
-          margin-left: 5px;
-          opacity: 1;
-        }
-      }
-    }
-  }
-  p {
-    position: relative;
-    margin: 1rem 0 0;
-    &:first-of-type {
-      margin-top: 1.25rem;
-      &:before {
-        content: "";
-        position: absolute;
-        height: 5px;
-        background: $color_prime;
-        width: 35px;
-        top: -0.75rem;
-        border-radius: 3px;
-      }
-    }
-  }
-  &:hover {
-    .details {
-      left: 0%;
-    }
-  }
-
-  @media (min-width: 640px) {
-    flex-direction: row;
-    max-width: 700px;
-    .meta {
-      flex-basis: 40%;
-      height: auto;
-    }
-    .description {
-      flex-basis: 60%;
-      &:before {
-        transform: skewX(-3deg);
-        content: "";
-        background: #fff;
-        width: 30px;
-        position: absolute;
-        left: -10px;
-        top: 0;
-        bottom: 0;
-        z-index: -1;
-      }
-    }
-    &.alt {
-      flex-direction: row-reverse;
-      .description {
-        &:before {
-          left: inherit;
-          right: -10px;
-          transform: skew(3deg);
-        }
-      }
-      .details {
-        padding-left: 25px;
-      }
-    }
   }
 }
