--- a/public/css/about.css
+++ b/public/css/about.css
@@ -56,6 +56,21 @@
     text-decoration: none;
 }
 
+.container2::-webkit-scrollbar {
+    height: 4px;
+}
+
+body::-webkit-scrollbar, .modal::-webkit-scrollbar {
+    width: 4px;
+}
+
+.container2::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb, .modal::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+}
+
 .contact {
     border: 1px solid #0cebeb;
     border-radius: 3px;
@@ -77,6 +92,7 @@
     color: black !important;
     text-decoration: none;
 }
+
 .section {
     margin: 40px auto;
 }
@@ -100,7 +116,6 @@ nav {
     margin: 0;
     padding: 5px;
     z-index: 5;
-    background-color: #121214;
 }
 
 .logo {
@@ -119,6 +134,28 @@ nav {
     height: 100vh;
     left: 0;
     right: 0;
+}
+
+.menu-item {
+    color: white;
+    text-decoration: none;
+    /* border: 1px solid white; */
+    /* border-radius: 5px; */
+    padding: 10px 10px;
+    margin-right: 30px;
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 15px;
+    padding: 5px;
+    z-index: 5;
 }
 
 #nav-bar {
@@ -267,4 +304,10 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+@media screen and (max-width: 990px) {
+    #content {
+        width: 100%;
+    }
 }
