--- a/public/css/single_event.css
+++ b/public/css/single_event.css
@@ -67,8 +67,9 @@
   outline: none;
 }
 
-#register-btn, #registered-btn {
+#register-btn, #registered-btn, #registration-closed-btn {
   color: black;
+  flex: 1;
   padding: 10px;
   border: 1px solid #0cebeb;
   border-radius: 5px;
@@ -83,6 +84,17 @@
   background: linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+ #registration-closed-btn {
+     color:white;
+     border-color: #ff0844;
+  background: #ff0844;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #ff0844 50%, #ffb199 100%);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #ff0844 50%, #ffb199 100%);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ }
 
 #registered-btn {
   display: none;
@@ -111,7 +123,7 @@
 }
 
 .event-container {
-  position: relative;
+  /*position: relative;*/
   top: 100px;
   width: 50%;
   color: white;
@@ -164,9 +176,9 @@ nav {
 
 #logout-btn {
   display: none;
-  color: #FF2323;
+  color: white;
   text-decoration: none;
-  border: 1px solid #FF2323;
+  border: 1px solid white;
   border-radius: 5px;
   padding: 10px 10px;
   margin-right: 30px;
@@ -175,6 +187,7 @@ nav {
 #logout-btn:hover {
   color: white;
   cursor: pointer;
+  border-color: #FF2323;
   background: #FF2323;
 }
 
